--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Node.JS client for the Bitcore Insight API.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
