--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/montyanderson/insight-client#readme",
   "dependencies": {
     "request": "^2.69.0"
+  },
+  "engines": {
+    "node": ">=4.0"  
   }
 }
